@@ -374,7 +374,9 @@ When doing so, the ID corresponding the captured error (`error.id`) is added to 
 the agent will add a https://logging.apache.org/log4j/2.x/manual/thread-context.html[ThreadContext] entry for `trace.id` and `transaction.id`.
 See the <<config-enable-log-correlation>> configuration option for more details.
 
-|1.13.0 (log correlation via `ThreadContext`)
+Automatically <<api-span-capture-exception,captures exceptions>> for `logger.error("message", exception)` calls.
+When doing so, the ID corresponding the captured error (`error.id`) is added to the MDC as well (since 1.16.0).
+|1.13.0
 
 
 |log4j
@@ -383,9 +385,7 @@ See the <<config-enable-log-correlation>> configuration option for more details.
 the agent will add a https://logging.apache.org/log4j/1.2/apidocs/org/apache/log4j/MDC.html[MDC] entry for `trace.id` and `transaction.id`.
 See the <<config-enable-log-correlation>> configuration option for more details.
 
-Automatically <<api-span-capture-exception,captures exceptions>> for `logger.error("message", exception)` calls.
-When doing so, the ID corresponding the captured error (`error.id`) is added to the MDC as well (since 1.16.0).
-|1.11.0 (error capturing), 1.13.0 (log correlation via log4j's MDC)
+|1.13.0
 
 |===
 
