@@ -31,6 +31,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Fixes error capturing for log4j2 loggers. Version 1.17.0 introduced a regression.
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
@@ -168,7 +169,7 @@ See <<circuit-breaker>> and {pull}1040[#1040] for more info.
 
 * Add support for <<supported-databases, Redis Lettuce client>>
 * Add `context.message.age.ms` field for JMS message receiving spans and transactions - {pull}970[#970]
-* Instrument log4j Logger#error(String, Throwable) ({pull}919[#919]) Automatically captures exceptions when calling `logger.error("message", exception)`
+* Instrument log4j2 Logger#error(String, Throwable) ({pull}919[#919]) Automatically captures exceptions when calling `logger.error("message", exception)`
 * Add instrumentation for external process execution through `java.lang.Process` and Apache `commons-exec` - {pull}903[#903]
 * Add `destination` fields to exit span contexts - {pull}976[#976]
 * Removed `context.message.topic.name` field - {pull}993[#993]
